--- a/Get-started/quick-start/creating-&-nesting-components.html
+++ b/Get-started/quick-start/creating-&-nesting-components.html
@@ -3,22 +3,22 @@
   <head>
     <title>Creating & Nesting components</title>
     <meta charset="utf-8" />
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
-    <script src="../libs/react.js"></script>
-    <script src="../libs/react-dom.js"></script>
-    <script src="../libs/babel.js"></script>
-    <script>
+    <script type="text/babel">
       /*React apps are made out of components. A component is a piece of the UI (user interface) that has its own logic and appearance. A component can be as small as a button, or as large as an entire page.
-    React components are JavaScript functions that return markup:*/
+      React components are JavaScript functions that return markup:*/
 
-      /*Notice that <MyButton /> starts with a capital letter. 
-    That’s how you know it’s a React component.*/
+      /*Notice that <MyButton /> starts with a capital letter.
+      That’s how you know it’s a React component.*/
       function MyButton() {
-        return <button>I'm a button</button>;
+        return (<button>I'm a button</button>);
       }
 
-      export default function MyApp() {
+      function MyApp() {
         return (
           <div>
             <h1>Welcome to my app</h1>
@@ -26,6 +26,10 @@
           </div>
         );
       }
+
+      const container = document.getElementById("root");
+      const root = ReactDOM.createRoot(container);
+      root.render(<MyApp />);
     </script>
   </body>
 </html>
